--- a/src/LibDataStructures.csproj
+++ b/src/LibDataStructures.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 	  <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-    <TargetFramework>netstandard2.1</TargetFramework>
+	  <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Bau.Libraries.LibDataStructures</RootNamespace>
     <PackageId>Bau.Libraries.LibDataStructures</PackageId>
     <Authors>Jose Antonio Bautista Montejo</Authors>
